# fds-catalog-ai-resolver

./: .env.example  .gitignore  README.md  manifest.json  pyproject.toml  requirements.txt
src/fds_catalog_ai_resolver/: __main__.py  app.py  db.py  llm.py  mcp_client.py  settings.py  worker.py
